<resources>
    <string name="app_name">SmartStudy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_zaloguj">Zaloguj</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Stringi w activity_add_lesson -->
    <string name="addLessonTextViewMain">Dodaj lekcję:</string>
    <string name="addLessonEditTextHint">nazwa</string>
    <string name="addLessonTextViewStartTime">godzina rozpoczęcia</string>
    <string name="addLessonEditTextHH">HH</string>
    <string name="addLessonTextViewHour">:</string>
    <string name="addLessonEditTextMM">MM</string>
    <string name="addLessonEditTextDurationHint">czas trwania</string>
    <string name="addLessonTextViewMin">min</string>
    <string name="addLessonEditTextRoomHint">sala</string>
    <string name="addLessonTextViewDay">Day</string>
    <string name="addLessonButtonSave">Zapisz</string>
    <string name="addLessonButtonCancel">Anuluj</string>

    <!-- Stringi w activity_add_note -->
    <string name="addNoteTextViewName">Nazwa:</string>
    <string name="addNoteEditTextHintMain">...</string>
    <string name="addNoteTextViewDate">Date</string>
    <string name="addNoteButtonSave">Zapisz</string>
    <string name="addNoteButtonCancel">Anuluj</string>

    <!-- Stringi w activity_calendar -->
    <string name="calendarButtonPrev">prev</string>
    <string name="calendarTextViewAct">act</string>
    <string name="calendarButtonNext">next</string>
    <string name="calendarButtonBackDate">Wróć do aktualnej daty</string>
    <string name="calendarTextViewMon">PON</string>
    <string name="calendarTextViewTue">WTO</string>
    <string name="calednarTextViewWed">ŚR</string>
    <string name="calendarTextViewThu">CZW</string>
    <string name="calendarTextViewFri">PT</string>
    <string name="calendarTextViewSat">SOB</string>
    <string name="calendarTextViewSun">NIEDZ</string>
    <string name="calendarButtonAddNote">Dodaj nową notatkę</string>
    <string name="calendarButtonDeleteNote">Usuń notatkę</string>
    <string name="calendarBackButton">Strona Główna</string>

    <!-- Stringi w activity_login -->
    <string name="loginEditTextHintLogin">Login</string>
    <string name="loginEditTextHintPassword">Hasło</string>
    <string name="loginButtonBack">Wstecz</string>
    <string name="loginButtonLogin">Zaloguj</string>

    <!-- Stringi w activity_main_page -->
    <string name="mainPageTextView">next</string>
    <string name="mainPageCurrentUser">currentUser</string>
    <string name="mainPageLogOut">Wyloguj</string>

    <!-- Stringi w activity_register -->
    <string name="registerEditTextHintName">Imię</string>
    <string name="registerEditTextHintSurname">Nazwisko</string>
    <string name="registerEditTextHintFieldOfStudies">Kierunek studiów</string>
    <string name="registerEditTextHintLogin">Login</string>
    <string name="registerEditTextHintPassword">Hasło</string>
    <string name="registerButtonBack">Wstecz</string>
    <string name="registerButtonRegister">Załóż konto</string>

    <!-- Stringi w activity_start -->
    <string name="startButtonLogin">Zaloguj</string>
    <string name="startButtonRegister">Załóż konto</string>

    <!-- Stringi w activity_timetable -->
    <string name="timetableButtonPrev">prev</string>
    <string name="timetableTextViewActualDay">actualDay</string>
    <string name="timetableButtonNext">next</string>
    <string name="timetableButtonAddLesson">Dodaj lekcję</string>
    <string name="timetableButtonDeleteLesson">Usuń lekcję</string>
    <string name="timetableBackButton">Strona Główna</string>

    <!-- Stringi w calendar_cell -->
    <string name="calendarCellTextView">1</string>

    <!-- Stringi w note_cell -->
    <string name="noteCellTextView">Note</string>

    <!-- Stringi w lesson_cell -->
    <string name="lessonCellTextView">Lesson</string>
    <string name="lessonCellTime">Time</string>
    <string name="lessonCellRoom">Room</string>

</resources>