<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/lessonCell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/lessonCellTextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lessonCellRoom"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignTop="@+id/lessonCell"
            android:layout_alignParentTop="@+id/lessonCell"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:text="@string/lessonCellRoom"
            android:textSize="15dp"
            android:textColor="#5b5b5b" />

        <TextView
            android:id="@+id/lessonCellTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lessonCell"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/lessonCellTime"
            android:textSize="15dp"
            android:textColor="#5b5b5b" />

    </RelativeLayout>
</android.support.v7.widget.CardView>