<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Timetable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#98C2E4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousDayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#98C2E4"
            android:onClick="previousDay"
            android:text="@string/timetableButtonPrev"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#98C2E4"
            android:text="@string/timetableTextViewActualDay"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nextDayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#98C2E4"
            android:onClick="nextDay"
            android:text="@string/timetableButtonNext"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/addLessonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#98C2E4"
        android:text="@string/timetableButtonDodajLekcje"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/hoursListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>